--- a/main.html
+++ b/main.html
@@ -1,24 +1,16 @@
 <!DOCTYPE html>
-<script>window.texme = { style: 'plain' }</script>
-<script src="https://cdn.jsdelivr.net/npm/texme@1.2.2"></script><textarea>
-# Lucas Aragão
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lucas Aragão</title>
+</head>
+<body>
+    <!-- Conteúdo do seu site vai aqui -->
+    <h2>Lucas Aragão - Personal Website</h2>
+<h3> About me: </h3>
+<p> I am a substitute professor at UFRJ. I had my phd degree at IMPA, under the supervison of Rob Morris.</p>
 
-
-UERJ (Universidade de Estado do Rio de Janeiro)<br>
-Professor Adjunto (Assistant Professor)
-
-R. São Francisco Xavier, 524<br>
-Maracanã<br>
-Rio de Janeiro, Brasil
-
-e-mail: lucas.aragao(at)uerj(dot)br
-
-## About me:
-
-I am Professor Adjunto (Assistant Professor) at UERJ. I had my phd degree at IMPA, under the supervison of Rob Morris. My interests have been focused mainly on extremal, probabilistic and additive combinatorics.
-
-## Recent papers:
-  
 
 <h3> Publications: </h3>
 
@@ -47,5 +39,6 @@ I am Professor Adjunto (Assistant Professor) at UERJ. I had my phd degree at IMP
 <p> Submitted </p>
 <p> </p>
 
-[**List of all publications**](http://arxiv.org/a/aragao_l_1)
 
+</body>
+</html>
