--- a/index.html
+++ b/index.html
@@ -24,10 +24,19 @@
         .about-me {
             margin-top: 30px;
         }
+        .profile-pic {
+            max-width: 200px;
+            height: auto;
+            border-radius: 50%;
+            margin-bottom: 20px;
+        }
     </style>
 </head>
 <body>
     <h1>Lucas Aragão - Personal Website</h1>
+
+    <!-- Adiciona a imagem -->
+    <img src="Lucas.jpg" alt="Lucas Aragão" class="profile-pic">
     
     <div class="contact-info">
         <p><strong>UERJ (Universidade de Estado do Rio de Janeiro)</strong></p>
