--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <h1>Lucas Aragão - Personal Website</h1>
 
     <!-- Adiciona a imagem -->
-    <img src="Lucas.jpg" alt="Lucas Aragão" class="profile-pic">
+    <img src="Lucas.JPG" alt="Lucas Aragão" class="profile-pic">
     
     <div class="contact-info">
         <p><strong>UERJ (Universidade de Estado do Rio de Janeiro)</strong></p>
