--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
             border-radius: 50%;
             margin-bottom: 20px;
         }
+        .publications {
+            margin-top: 40px;
+        }
     </style>
 </head>
 <body>
@@ -50,6 +53,38 @@
     <div class="about-me">
         <h2>About me:</h2>
         <p>I am Professor Adjunto (Assistant Professor) at UERJ. I had my PhD degree at IMPA, under the supervision of Rob Morris. My interests have been focused mainly on extremal, probabilistic and additive combinatorics.</p>
+    </div>
+
+    <div class="publications">
+        <h2>Recent papers:</h2>
+        <h3>Publications:</h3>
+
+        <a href="https://arxiv.org/abs/2403.13742">Degree conditions for Ramsey goodness of paths</a>
+        <p>with João Pedro Marciano and Walner Mendonça.</p>
+        <p>Submitted</p>
+        <br>
+
+        <a href="https://arxiv.org/abs/2311.18742">On the number of monochromatic solutions to multiplicative equations</a>
+        <p>with Jonathan Chapman, Miquel Ortega, and Victor Souza.</p>
+        <p>Submitted</p>
+        <br>
+
+        <a href="https://arxiv.org/abs/2306.01728">The diameter of randomly twisted hypercubes</a>
+        <p>with Maurício Collares, Gabriel Dahia, João Pedro Marciano.</p>
+        <p>Submitted</p>
+        <br>
+
+        <a href="https://arxiv.org/abs/2301.13189">Localised graph Maclaurin inequalities</a>
+        <p>with Victor Souza.</p>
+        <p>Submitted</p>
+        <br>
+
+        <a href="https://arxiv.org/abs/2212.06802">A lower bound for set-colouring Ramsey numbers</a>
+        <p>with Maurício Collares, João Pedro Marciano, Taísa Martins, and Robert Morris.</p>
+        <p>Submitted</p>
+        <br>
+
+        <p><a href="http://arxiv.org/a/aragao_l_1"><strong>List of all publications</strong></a></p>
     </div>
 </body>
 </html>
