--- a/index.html
+++ b/index.html
@@ -50,10 +50,9 @@
         <p>e-mail: lucas.aragao(at)uerj(dot)br</p>
     </div>
 
-  <div class="about-me">
+    <div class="about-me">
         <h2>About me:</h2>
-        <p>I am Professor Adjunto (Assistant Professor) at UERJ. I had my PhD degree at IMPA, under the supervision of Rob Morris. My interests have been focused mainly on extremal, probabilistic and additive combinatorics.</p>
-        <p>You can learn more about my PhD supervisor, Rob Morris, by visiting his <a href="https://robiscounting.github.io/" target="_blank">personal website</a>.</p>
+        <p>I am Professor Adjunto (Assistant Professor) at UERJ. I had my PhD degree at IMPA, under the supervision of <a href="https://robiscounting.github.io/" target="_blank">Rob Morris</a>. My interests have been focused mainly on extremal, probabilistic and additive combinatorics.</p>
     </div>
 
     <div class="publications">
