--- a/index.html
+++ b/index.html
@@ -34,6 +34,15 @@
             margin-top: 40px;
         }
     </style>
+    nava {
+            margin-right: 15px;
+            text-decoration: none;
+            color: #0073e6;
+        }
+        nava:hover {
+            text-decoration: underline;
+        }
+    </style></head><body><h1>Lucas Aragão - Teaching</h1><!-- Menu de navegação --><nav><a href="index.html">Home</a><a href="teaching.html">Teaching</a></nav><h2>Courses I Teach</h2><p>Here you can find information about the courses I am currently teaching.</p><h3>Course 1: Calculus I</h3><p>Description, schedule, and resources for Calculus I.</p><h3>Course 2: Discrete Mathematics</h3><p>Description, schedule, and resources for Discrete Mathematics.</p><!-- Adicione mais cursos conforme necessário --></body></html>
 </head>
 <body>
     <h1>Lucas Aragão - Personal Website</h1>
