--- a/index.html
+++ b/index.html
@@ -1,11 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lucas Aragão - Personal Website</title>
-    <style>
-        body {
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Lucas Aragão - Personal Website</title><style>body {
             font-family: Arial, sans-serif;
             line-height: 1.6;
             max-width: 800px;
@@ -15,14 +8,17 @@
         h1 {
             color: #333;
         }
-        p {
-            margin: 10px 0;
-        }
-        .contact-info {
+        nav {
             margin-bottom: 20px;
         }
-        .about-me {
-            margin-top: 30px;
+        nava {
+            margin-right: 15px;
+            text-decoration: none;
+            color: #0073e6;
+            font-weight: bold;
+        }
+        nava:hover {
+            text-decoration: underline;
         }
         .profile-pic {
             max-width: 200px;
@@ -30,70 +26,16 @@
             border-radius: 50%;
             margin-bottom: 20px;
         }
-        .publications {
-            margin-top: 40px;
+        .contact-info, .about-me, .publications {
+            margin-bottom: 20px;
         }
-    </style>
-    nava {
-            margin-right: 15px;
-            text-decoration: none;
-            color: #0073e6;
+        .publicationsa {
+            display: block;
+            margin-bottom: 5px;
         }
-        nava:hover {
-            text-decoration: underline;
-        }
-    </style></head><body><h1>Lucas Aragão - Teaching</h1><!-- Menu de navegação --><nav><a href="index.html">Home</a><a href="teaching.html">Teaching</a></nav><h2>Courses I Teach</h2><p>Here you can find information about the courses I am currently teaching.</p><h3>Course 1: Calculus I</h3><p>Description, schedule, and resources for Calculus I.</p><h3>Course 2: Discrete Mathematics</h3><p>Description, schedule, and resources for Discrete Mathematics.</p><!-- Adicione mais cursos conforme necessário --></body></html>
-</head>
-<body>
-    <h1>Lucas Aragão - Personal Website</h1>
-
-    <!-- Adiciona a imagem -->
-    <img src="Lucas.JPG" alt="Lucas Aragão" class="profile-pic">
-    
-    <div class="contact-info">
-        <p><strong>UERJ (Universidade de Estado do Rio de Janeiro)</strong></p>
-        <p>Professor Adjunto (Assistant Professor)</p>
-        <p>R. São Francisco Xavier, 524</p>
-        <p>Maracanã</p>
-        <p>Rio de Janeiro, Brasil</p>
-        <p>e-mail: lucas.aragao(at)uerj(dot)br</p>
-    </div>
-
-    <div class="about-me">
-        <h2>About me:</h2>
-        <p>I am Professor Adjunto (Assistant Professor) at UERJ. I had my PhD degree at IMPA, under the supervision of <a href="https://robiscounting.github.io/" target="_blank">Rob Morris</a>. My interests have been focused mainly on extremal, probabilistic and additive combinatorics.</p>
-    </div>
-
-    <div class="publications">
-        <h2>Recent papers:</h2>
-        <h3>Publications:</h3>
-
-        <a href="https://arxiv.org/abs/2403.13742">Degree conditions for Ramsey goodness of paths</a>
-        <p>with João Pedro Marciano and Walner Mendonça.</p>
-        <p>Submitted</p>
-        <br>
-
-        <a href="https://arxiv.org/abs/2311.18742">On the number of monochromatic solutions to multiplicative equations</a>
-        <p>with Jonathan Chapman, Miquel Ortega, and Victor Souza.</p>
-        <p>Submitted</p>
-        <br>
-
-        <a href="https://arxiv.org/abs/2306.01728">The diameter of randomly twisted hypercubes</a>
-        <p>with Maurício Collares, Gabriel Dahia, João Pedro Marciano.</p>
-        <p>Submitted</p>
-        <br>
-
-        <a href="https://arxiv.org/abs/2301.13189">Localised graph Maclaurin inequalities</a>
-        <p>with Victor Souza.</p>
-        <p>Submitted</p>
-        <br>
-
-        <a href="https://arxiv.org/abs/2212.06802">A lower bound for set-colouring Ramsey numbers</a>
-        <p>with Maurício Collares, João Pedro Marciano, Taísa Martins, and Robert Morris.</p>
-        <p>Submitted</p>
-        <br>
-
-        <p><a href="http://arxiv.org/a/aragao_l_1"><strong>List of all publications</strong></a></p>
-    </div>
-</body>
-</html>
+    </style></head><body><h1>Lucas Aragão - Personal Website</h1><!-- Menu de navegação --><nav><a href="index.html">Home</a><a href="teaching.html">Teaching</a><!-- Aba Teaching --></nav><!-- Adiciona a imagem --><img src="Lucas.JPG" alt="Lucas Aragão" class="profile-pic"><div class="contact-info"><p><strong>UERJ (Universidade de Estado do Rio de Janeiro)</strong></p><p>Professor Adjunto (Assistant Professor)</p><p>R. São Francisco Xavier, 524</p><p>Maracanã</p><p>Rio de Janeiro, Brasil</p><p>e-mail: lucas.aragao(at)uerj(dot)br</p></div><div class="about-me"><h2>About me:</h2><p>
+            I am Professor Adjunto (Assistant Professor) at UERJ. 
+            I had my PhD degree at IMPA, under the supervision of 
+            <ahref="https://robiscounting.github.io/"target="_blank">Rob Morris</a>. 
+            My interests have been focused mainly on extremal, probabilistic and additive combinatorics.
+        </p></div><div class="publications"><h2>Recent papers:</h2><a href="https://arxiv.org/abs/2403.13742">Degree conditions for Ramsey goodness of paths</a><p>with João Pedro Marciano and Walner Mendonça. Submitted</p><a href="https://arxiv.org/abs/2311.18742">On the number of monochromatic solutions to multiplicative equations</a><p>with Jonathan Chapman, Miquel Ortega, and Victor Souza. Submitted</p><a href="https://arxiv.org/abs/2306.01728">The diameter of randomly twisted hypercubes</a><p>with Maurício Collares, Gabriel Dahia, João Pedro Marciano. Submitted</p><a href="https://arxiv.org/abs/2301.13189">Localised graph Maclaurin inequalities</a><p>with Victor Souza. Submitted</p><a href="https://arxiv.org/abs/2212.06802">A lower bound for set-colouring Ramsey numbers</a><p>with Maurício Collares, João Pedro Marciano, Taísa Martins, and Robert Morris. Submitted</p><p><ahref="http://arxiv.org/a/aragao_l_1"><strong>List of all publications</strong></a></p></div></body></html>
