--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
             border-radius: 50%;
             margin-bottom: 20px;
         }
+        .cats-pic {
+            max-width: 300px;
+            height: auto;
+            border-radius: 10px;
+            margin-bottom: 20px;
+        }
         .contact-info, .about-me, .publications {
             margin-bottom: 20px;
         }
@@ -33,9 +39,9 @@
             display: block;
             margin-bottom: 5px;
         }
-    </style></head><body><h1>Lucas Aragão - Personal Website</h1><!-- Menu de navegação --><nav><a href="index.html">Home      </a><a href="teaching.html">Teaching</a><!-- Aba Teaching --></nav><!-- Adiciona a imagem --><img src="Lucas.JPG" alt="Lucas Aragão" class="profile-pic"><div class="contact-info"><p><strong>UERJ (Universidade de Estado do Rio de Janeiro)</strong></p><p>Professor Adjunto (Assistant Professor)</p><p>R. São Francisco Xavier, 524</p><p>Maracanã</p><p>Rio de Janeiro, Brasil</p><p>e-mail: lucas.aragao(at)uerj(dot)br</p></div><div class="about-me"><h2>About me:</h2><p>
+    </style></head><body><h1>Lucas Aragão - Personal Website</h1><!-- Menu de navegação --><nav><a href="index.html">Home</a><a href="teaching.html">Teaching</a><!-- Aba Teaching --></nav><!-- Adiciona a imagem do perfil --><img src="Lucas.JPG" alt="Lucas Aragão" class="profile-pic"><!-- Adiciona a imagem das gatas --><img src="amores.jpeg" alt="Amores - Minhas Gatas" class="cats-pic"><div class="contact-info"><p><strong>UERJ (Universidade de Estado do Rio de Janeiro)</strong></p><p>Professor Adjunto (Assistant Professor)</p><p>R. São Francisco Xavier, 524</p><p>Maracanã</p><p>Rio de Janeiro, Brasil</p><p>e-mail: lucas.aragao(at)uerj(dot)br</p></div><div class="about-me"><h2>About me:</h2><p>
             I am Professor Adjunto (Assistant Professor) at UERJ. 
             I had my PhD degree at IMPA, under the supervision of 
             <ahref="https://robiscounting.github.io/"target="_blank">Rob Morris</a>. 
             My interests have been focused mainly on extremal, probabilistic and additive combinatorics.
-<divclass="publications"><h2>Recent papers:</h2><h3>Publications:</h3><a href="https://arxiv.org/abs/2403.13742">Degree conditions for Ramsey goodness of paths</a><p>with João Pedro Marciano and Walner Mendonça.</p><p>Submitted</p><br><a href="https://arxiv.org/abs/2311.18742">On the number of monochromatic solutions to multiplicative equations</a><p>with Jonathan Chapman, Miquel Ortega, and Victor Souza.</p><p>Submitted</p><br><a href="https://arxiv.org/abs/2306.01728">The diameter of randomly twisted hypercubes</a><p>with Maurício Collares, Gabriel Dahia, João Pedro Marciano.</p><p>Submitted</p><br><a href="https://arxiv.org/abs/2301.13189">Localised graph Maclaurin inequalities</a><p>with Victor Souza.</p><p>Submitted</p><br><a href="https://arxiv.org/abs/2212.06802">A lower bound for set-colouring Ramsey numbers</a><p>with Maurício Collares, João Pedro Marciano, Taísa Martins, and Robert Morris.</p><p>Submitted</p><br><p><ahref="http://arxiv.org/a/aragao_l_1"><strong>List of all publications</strong></a></p></div>
+        </p></div><div class="publications"><h2>Recent papers:</h2><h3>Publications:</h3><a href="https://arxiv.org/abs/2403.13742">Degree conditions for Ramsey goodness of paths</a><p>with João Pedro Marciano and Walner Mendonça.</p><p>Submitted</p><br><a href="https://arxiv.org/abs/2311.18742">On the number of monochromatic solutions to multiplicative equations</a><p>with Jonathan Chapman, Miquel Ortega, and Victor Souza.</p><p>Submitted</p><br><a href="https://arxiv.org/abs/2306.01728">The diameter of randomly twisted hypercubes</a><p>with Maurício Collares, Gabriel Dahia, João Pedro Marciano.</p><p>Submitted</p><br><a href="https://arxiv.org/abs/2301.13189">Localised graph Maclaurin inequalities</a><p>with Victor Souza.</p><p>Submitted</p><br><a href="https://arxiv.org/abs/2212.06802">A lower bound for set-colouring Ramsey numbers</a><p>with Maurício Collares, João Pedro Marciano, Taísa Martins, and Robert Morris.</p><p>Submitted</p><br><p><ahref="http://arxiv.org/a/aragao_l_1"><strong>List of all publications</strong></a></p></div></body></html>
