--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
             display: block;
             margin-bottom: 5px;
         }
+        /* Estilo para o menu de navegação */nava {
+            margin-right: 30px; /* Aumenta o espaço entre os links */
+        }
     </style></head><body><h1>Lucas Aragão - Personal Website</h1><!-- Menu de navegação --><nav><a href="index.html">Home</a><a href="teaching.html">Teaching</a><!-- Aba Teaching --></nav><!-- Adiciona a imagem do perfil --><img src="Lucas.JPG" alt="Lucas Aragão" class="profile-pic"><!-- Adiciona a imagem das gatas --><img src="amores.jpeg" alt="Amores - Minhas Gatas" class="cats-pic"><div class="contact-info"><p><strong>UERJ (Universidade de Estado do Rio de Janeiro)</strong></p><p>Professor Adjunto (Assistant Professor)</p><p>R. São Francisco Xavier, 524</p><p>Maracanã</p><p>Rio de Janeiro, Brasil</p><p>e-mail: lucas.aragao(at)uerj(dot)br</p></div><div class="about-me"><h2>About me:</h2><p>
             I am Professor Adjunto (Assistant Professor) at UERJ. 
             I had my PhD degree at IMPA, under the supervision of 
