--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Lucas Aragão - Personal Website</title><style>body {
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><meta name="description" content="Site pessoal de Lucas Aragão, Professor Adjunto na UERJ com interesse em combinatória extremal, probabilística e aditiva."><meta name="keywords" content="Lucas Aragão, Professor Adjunto, UERJ, Combinatória, Pesquisa, Matemática"><meta name="robots" content="index, follow"><title>Lucas Aragão - Personal Website</title><style>body {
             font-family: Arial, sans-serif;
             line-height: 1.6;
             max-width: 800px;
@@ -12,8 +12,7 @@
             margin-bottom: 20px;
         }
         nava {
-            margin-right: 15px;
-            text-decoration: none;
+            margin-right: 30px; /* Aumenta o espaço entre os links */text-decoration: none;
             color: #0073e6;
             font-weight: bold;
         }
@@ -39,8 +38,8 @@
             display: block;
             margin-bottom: 5px;
         }
-        /* Estilo para o menu de navegação */nava {
-            margin-right: 30px; /* Aumenta o espaço entre os links */
+        .publicationsp {
+            margin: 0;
         }
     </style></head><body><h1>Lucas Aragão - Personal Website</h1><!-- Menu de navegação --><nav><a href="index.html">Home</a><a href="teaching.html">Teaching</a><!-- Aba Teaching --></nav><!-- Adiciona a imagem do perfil --><img src="Lucas.JPG" alt="Lucas Aragão" class="profile-pic"><!-- Adiciona a imagem das gatas --><img src="amores.jpeg" alt="Amores - Minhas Gatas" class="cats-pic"><div class="contact-info"><p><strong>UERJ (Universidade de Estado do Rio de Janeiro)</strong></p><p>Professor Adjunto (Assistant Professor)</p><p>R. São Francisco Xavier, 524</p><p>Maracanã</p><p>Rio de Janeiro, Brasil</p><p>e-mail: lucas.aragao(at)uerj(dot)br</p></div><div class="about-me"><h2>About me:</h2><p>
             I am Professor Adjunto (Assistant Professor) at UERJ. 
