--- a/index.html
+++ b/index.html
@@ -1,51 +1,51 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><meta name="description" content="Site pessoal de Lucas Aragão, Professor Adjunto na UERJ com interesse em combinatória extremal, probabilística e aditiva."><meta name="keywords" content="Lucas Aragão, Professor Adjunto, UERJ, Combinatória, Pesquisa, Matemática"><meta name="robots" content="index, follow"><title>Lucas Aragão - Personal Website</title><style>body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-        }
-        h1 {
-            color: #333;
-        }
-        nav {
-            margin-bottom: 20px;
-        }
-        nava {
-            margin-right: 30px; /* Aumenta o espaço entre os links */text-decoration: none;
-            color: #0073e6;
-            font-weight: bold;
-        }
-        nava:hover {
-            text-decoration: underline;
-        }
-        .profile-pic {
-            max-width: 200px;
-            height: auto;
-            border-radius: 50%;
-            margin-bottom: 20px;
-        }
-        .cats-pic {
-            max-width: 300px;
-            height: auto;
-            border-radius: 10px;
-            margin-bottom: 20px;
-        }
-        .contact-info, .about-me, .publications {
-            margin-bottom: 20px;
-        }
-        .publicationsa {
-            display: block;
-            margin-bottom: 5px;
-        }
-        .publicationsp {
-            margin: 0;
-        }
-    </style>
-<meta name="google-site-verification" content="y_5dbkP1JQZs9TK0UvB9idnxJP0inrKrnCLwCmd-BJo" />
-</head><body><h1>Lucas Aragão - Personal Website</h1><!-- Menu de navegação --><nav><a href="index.html">Home</a><a href="teaching.html">Teaching</a><!-- Aba Teaching --></nav><!-- Adiciona a imagem do perfil --><img src="Lucas.JPG" alt="Lucas Aragão" class="profile-pic"><!-- Adiciona a imagem das gatas --><img src="amores.jpeg" alt="Amores - Minhas Gatas" class="cats-pic"><div class="contact-info"><p><strong>UERJ (Universidade de Estado do Rio de Janeiro)</strong></p><p>Professor Adjunto (Assistant Professor)</p><p>R. São Francisco Xavier, 524</p><p>Maracanã</p><p>Rio de Janeiro, Brasil</p><p>e-mail: lucas.aragao(at)uerj(dot)br</p></div><div class="about-me"><h2>About me:</h2><p>
-            I am Professor Adjunto (Assistant Professor) at UERJ. 
-            I had my PhD degree at IMPA, under the supervision of 
-            <ahref="https://robiscounting.github.io/"target="_blank">Rob Morris</a>. 
-            My interests have been focused mainly on extremal, probabilistic and additive combinatorics.
-        </p></div><div class="publications"><h2>Recent papers:</h2><h3>Publications:</h3><a href="https://arxiv.org/abs/2403.13742">Degree conditions for Ramsey goodness of paths</a><p>with João Pedro Marciano and Walner Mendonça.</p><p>Submitted</p><br><a href="https://arxiv.org/abs/2311.18742">On the number of monochromatic solutions to multiplicative equations</a><p>with Jonathan Chapman, Miquel Ortega, and Victor Souza.</p><p>Submitted</p><br><a href="https://arxiv.org/abs/2306.01728">The diameter of randomly twisted hypercubes</a><p>with Maurício Collares, Gabriel Dahia, João Pedro Marciano.</p><p>Submitted</p><br><a href="https://arxiv.org/abs/2301.13189">Localised graph Maclaurin inequalities</a><p>with Victor Souza.</p><p>Submitted</p><br><a href="https://arxiv.org/abs/2212.06802">A lower bound for set-colouring Ramsey numbers</a><p>with Maurício Collares, João Pedro Marciano, Taísa Martins, and Robert Morris.</p><p>Submitted</p><br><p><ahref="http://arxiv.org/a/aragao_l_1"><strong>List of all publications</strong></a></p></div></body></html>
+<!DOCTYPE html>
+<script>window.texme = { style: 'plain' }</script>
+<script src="https://cdn.jsdelivr.net/npm/texme@1.2.2"></script><textarea>
+# Lucas Aragão
+
+
+UERJ (Universidade de Estado do Rio de Janeiro)<br>
+Professor Adjunto (Assistant Professor)
+
+R. São Francisco Xavier, 524<br>
+Maracanã<br>
+Rio de Janeiro, Brasil
+
+e-mail: lucas.aragao(at)uerj(dot)br
+
+## About me:
+
+I am Professor Adjunto (Assistant Professor) at UERJ. I had my phd degree at IMPA, under the supervison of Rob Morris. My interests have been focused mainly on extremal, probabilistic and additive combinatorics.
+
+## Recent papers:
+  
+
+<h3> Publications: </h3>
+
+<a href="https://arxiv.org/abs/2403.13742">Degree conditions for Ramsey goodness of paths</a>
+<p> with João Pedro Marciano and Walner Mendonça. </p>
+<p> Submitted </p>
+<p> </p>
+
+<a href="https://arxiv.org/abs/2311.18742">On the number of monochromatic solutions to multiplicative equations</a>
+<p> with Jonathan Chapman, Miquel :Ortega and Victor Souza. </p>
+<p> Submitted </p>
+<p> </p>
+
+<a href="https://arxiv.org/abs/2306.01728">The diameter of randomly twisted hypercubes</a>
+<p> with Maurício Collares, Gabriel Dahia, João Pedro Marciano. </p>
+<p> Submitted </p>
+<p> </p>
+
+<a href="https://arxiv.org/abs/2301.13189">Localised graph Maclaurin inequalities</a>
+<p> with Victor Souza. </p>
+<p> Submitted </p>
+<p> </p>
+
+<a href="https://arxiv.org/abs/2212.06802">A lower bound for set-colouring Ramsey numbers</a>
+<p> with Maurício Collares, João Pedro Marciano, Taísa Martins and Robert Morris. </p>
+<p> Submitted </p>
+<p> </p>
+
+[**List of all publications**](http://arxiv.org/a/aragao_l_1)
+
