--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ I am Professor Adjunto (Assistant Professor) at UERJ. I had my phd degree at IMP
 <p> </p>
 
 <a href="https://arxiv.org/abs/2311.18742">On the number of monochromatic solutions to multiplicative equations</a>
-<p> with Jonathan Chapman, Miquel :Ortega and Victor Souza. </p>
+<p> with Jonathan Chapman, Miquel Ortega and Victor Souza. </p>
 <p> Submitted </p>
 <p> </p>
 
