--- a/index.html
+++ b/index.html
@@ -1,51 +1,115 @@
 <!DOCTYPE html>
-<script>window.texme = { style: 'plain' }</script>
-<script src="https://cdn.jsdelivr.net/npm/texme@1.2.2"></script><textarea>
-# Lucas Aragão
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Site pessoal de Lucas Aragão, Professor Adjunto na UERJ com interesse em combinatória extremal, probabilística e aditiva.">
+    <meta name="keywords" content="Lucas Aragão, Professor Adjunto, UERJ, Combinatória, Pesquisa, Matemática">
 
+    <title>Lucas Aragão - Personal Website</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+        h1 {
+            color: #333;
+        }
+        nav {
+            margin-bottom: 20px;
+        }
+        nav a {
+            margin-right: 20px;
+            text-decoration: none;
+            color: #0073e6;
+            font-weight: bold;
+        }
+        nav a:hover {
+            text-decoration: underline;
+        }
+        .profile-pic, .cats-pic {
+            max-width: 100%;
+            height: auto;
+            border-radius: 10px;
+            margin-bottom: 20px;
+        }
+        .profile-pic {
+            border-radius: 50%;
+            max-width: 200px;
+        }
+        section {
+            margin-bottom: 20px;
+        }
+        .publications a {
+            display: block;
+            margin-bottom: 5px;
+            color: #0073e6;
+        }
+        .publications p {
+            margin: 0;
+        }
+    </style>
+</head>
+<body>
+    <h1>Lucas Aragão - Personal Website</h1>
 
-UERJ (Universidade de Estado do Rio de Janeiro)<br>
-Professor Adjunto (Assistant Professor)
+    <!-- Navigation Menu -->
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="teaching.html">Teaching</a>
+    </nav>
 
-R. São Francisco Xavier, 524<br>
-Maracanã<br>
-Rio de Janeiro, Brasil
+    <!-- Profile Image -->
+    <img src="Lucas.JPG" alt="Lucas Aragão" class="profile-pic">
 
-e-mail: lucas.aragao(at)uerj(dot)br
+    <!-- Cats Image -->
+    <img src="amores.jpeg" alt="Amores - Minhas Gatas" class="cats-pic">
 
-## About me:
+    <!-- Contact Information -->
+    <section>
+        <h2>Contact Information</h2>
+        <p><strong>UERJ (Universidade do Estado do Rio de Janeiro)</strong></p>
+        <p>Professor Adjunto (Assistant Professor)</p>
+        <p>R. São Francisco Xavier, 524</p>
+        <p>Maracanã</p>
+        <p>Rio de Janeiro, Brasil</p>
+        <p>Email: lucas.aragao(at)uerj(dot)br</p>
+    </section>
 
-I am Professor Adjunto (Assistant Professor) at UERJ. I had my phd degree at IMPA, under the supervison of Rob Morris. My interests have been focused mainly on extremal, probabilistic and additive combinatorics.
+    <!-- About Me Section -->
+    <section>
+        <h2>About Me</h2>
+        <p>
+            I am Professor Adjunto (Assistant Professor) at UERJ. 
+            I earned my PhD at IMPA under the supervision of 
+            <a href="https://robiscounting.github.io/" target="_blank">Rob Morris</a>. 
+            My research focuses mainly on extremal, probabilistic, and additive combinatorics.
+        </p>
+    </section>
 
-## Recent papers:
-  
+    <!-- Publications Section -->
+    <section class="publications">
+        <h2>Recent Papers</h2>
+        <h3>Publications:</h3>
+        <a href="https://arxiv.org/abs/2403.13742">Degree conditions for Ramsey goodness of paths</a>
+        <p>with João Pedro Marciano and Walner Mendonça. Submitted</p>
 
-<h3> Publications: </h3>
+        <a href="https://arxiv.org/abs/2311.18742">On the number of monochromatic solutions to multiplicative equations</a>
+        <p>with Jonathan Chapman, Miquel Ortega, and Victor Souza. Submitted</p>
 
-<a href="https://arxiv.org/abs/2403.13742">Degree conditions for Ramsey goodness of paths</a>
-<p> with João Pedro Marciano and Walner Mendonça. </p>
-<p> Submitted </p>
-<p> </p>
+        <a href="https://arxiv.org/abs/2306.01728">The diameter of randomly twisted hypercubes</a>
+        <p>with Maurício Collares, Gabriel Dahia, João Pedro Marciano. Submitted</p>
 
-<a href="https://arxiv.org/abs/2311.18742">On the number of monochromatic solutions to multiplicative equations</a>
-<p> with Jonathan Chapman, Miquel Ortega and Victor Souza. </p>
-<p> Submitted </p>
-<p> </p>
+        <a href="https://arxiv.org/abs/2301.13189">Localised graph Maclaurin inequalities</a>
+        <p>with Victor Souza. Submitted</p>
 
-<a href="https://arxiv.org/abs/2306.01728">The diameter of randomly twisted hypercubes</a>
-<p> with Maurício Collares, Gabriel Dahia, João Pedro Marciano. </p>
-<p> Submitted </p>
-<p> </p>
+        <a href="https://arxiv.org/abs/2212.06802">A lower bound for set-colouring Ramsey numbers</a>
+        <p>with Maurício Collares, João Pedro Marciano, Taísa Martins, and Robert Morris. Submitted</p>
 
-<a href="https://arxiv.org/abs/2301.13189">Localised graph Maclaurin inequalities</a>
-<p> with Victor Souza. </p>
-<p> Submitted </p>
-<p> </p>
-
-<a href="https://arxiv.org/abs/2212.06802">A lower bound for set-colouring Ramsey numbers</a>
-<p> with Maurício Collares, João Pedro Marciano, Taísa Martins and Robert Morris. </p>
-<p> Submitted </p>
-<p> </p>
-
-[**List of all publications**](http://arxiv.org/a/aragao_l_1)
-
+        <p><a href="http://arxiv.org/a/aragao_l_1"><strong>List of all publications</strong></a></p>
+    </section>
+</body>
+</html>
