--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
             border-radius: 50%;
             max-width: 200px;
         }
+        .cats-pic {
+            max-width: 300px; /* Limita a largura da foto */
+            height: auto;     /* Mantém a proporção */
+            border-radius: 10px; /* Bordas arredondadas */
+            margin-bottom: 20px;
+        }
         section {
             margin-bottom: 20px;
         }
