--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             max-width: 300px; /* Limita a largura da foto */
             height: auto;     /* Mantém a proporção */
             border-radius: 10px; /* Bordas arredondadas */
+            max-width: 150px;
             margin-bottom: 20px;
         }
         section {
