--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <h3>Accepted Papers:</h3>
         <a href="https://doi.org/10.1016/j.ejc.2024.104082">Degree conditions for Ramsey goodness of paths</a>
         <p>with João Pedro Marciano and Walner Mendonça.</p>
-        <p>European Journal of Combinatorics, 124 (2025), 104082</p>
+        <p>European Journal of Combinatorics, 124 (2025), 104082</p> <a href="https://arxiv.org/pdf/2403.13742">.pdf</a>
         <br>
     
         <a href="https://doi.org/10.1016/j.ejc.2024.104078">The diameter of randomly twisted hypercubes</a>
