--- a/index.html
+++ b/index.html
@@ -109,9 +109,12 @@
         
         <h3>Accepted Papers:</h3>
         <a href="https://doi.org/10.1016/j.ejc.2024.104082">Degree conditions for Ramsey goodness of paths</a>
-        <p>with João Pedro Marciano and Walner Mendonça.</p>
-        <p>European Journal of Combinatorics, 124 (2025), 104082<a href="https://arxiv.org/pdf/2403.13742">.pdf</a></p>
-        <br>
+        <p>
+            with João Pedro Marciano and Walner Mendonça.<br>
+            European Journal of Combinatorics, 124 (2025), 104082 
+            <a href="https://arxiv.org/pdf/2403.13742">.pdf</a>
+        </p>
+
     
         <a href="https://doi.org/10.1016/j.ejc.2024.104078">The diameter of randomly twisted hypercubes</a>
         <p>with Maurício Collares, Gabriel Dahia, João Pedro Marciano.</p>
