--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@
         <p>
             with João Pedro Marciano and Walner Mendonça.<br>
             European Journal of Combinatorics, 124 (2025), 104082 
-            <a href="https://arxiv.org/pdf/2403.13742">.pdf</a>
+            <span><a href="https://arxiv.org/pdf/2403.13742">.pdf</a></span>
         </p>
-
+        <br>
     
         <a href="https://doi.org/10.1016/j.ejc.2024.104078">The diameter of randomly twisted hypercubes</a>
         <p>with Maurício Collares, Gabriel Dahia, João Pedro Marciano.</p>
