--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <p>
             with João Pedro Marciano and Walner Mendonça.<br>
             European Journal of Combinatorics, 124 (2025), 104082 
-            <span><a href="https://arxiv.org/pdf/2403.13742">.pdf</a></span>
+            <a href="https://arxiv.org/pdf/2403.13742" style="display: inline; margin-left: 5px;">.pdf</a>
         </p>
         <br>
     
