--- a/index.html
+++ b/index.html
@@ -90,8 +90,9 @@
     <section>
         <h2>About Me</h2>
         <p>
+            
             I am Professor Adjunto (Assistant Professor) at UERJ. 
-            I earned my PhD at IMPA under the supervision of 
+            I had my PhD at IMPA under the supervision of 
             <a href="https://robiscounting.github.io/" target="_blank">Rob Morris</a>. 
             My research focuses mainly on extremal, probabilistic, and additive combinatorics.
         </p>
