--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
     <section>
         <h2>Contact Information</h2>
         <p><strong>UERJ (Universidade do Estado do Rio de Janeiro)</strong></p>
-        <p>Professor Adjunto (Assistant Professor)</p>
-        <p>R. São Francisco Xavier, 524</p>
-        <p>Maracanã</p>
-        <p>Rio de Janeiro, Brasil</p>
-        <p>Email: lucas.aragao(at)uerj(dot)br</p>
+        <p>Professor Adjunto (Assistant Professor)
+        R. São Francisco Xavier, 524
+        Maracanã
+        Rio de Janeiro, Brasil
+        Email: lucas.aragao(at)uerj(dot)br</p>
     </section>
 
     <!-- About Me Section -->
