--- a/teaching.html
+++ b/teaching.html
@@ -22,7 +22,7 @@
                 <p>Informações sobre os cursos que estou ensinando.</p>
                 
                 <h3>Cálculo I - 24.2</h3>
-                <p>Description, schedule, and resources for Calculus I.</p>]
+                <p>Description, schedule, and resources for Calculus I.</p>
                 
                 <h3> Equações Diferenciais Ordinárias - 24.2</h3>
                 <p> Lista 1. Prova 1.</p>
