Update university affiliation from UERJ to UFRJ

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Site pessoal de Lucas Aragão, Professor Adjunto na UERJ com interesse em combinatória extremal, probabilística e aditiva.">
-    <meta name="keywords" content="Lucas Aragão, Professor Adjunto, UERJ, Combinatória, Pesquisa, Matemática">
+    <meta name="description" content="Site pessoal de Lucas Aragão, Professor Adjunto na UFRJ com interesse em combinatória extremal, probabilística e aditiva.">
+    <meta name="keywords" content="Lucas Aragão, Professor Adjunto, UFRJ, Combinatória, Pesquisa, Matemática">
 
     <title>Lucas Aragão - Personal Website</title>
     <style>
@@ -77,10 +77,10 @@
     <!-- Contact Information -->
     <section>
         <h2>Contact Information</h2>
-        <p><strong>UERJ (Universidade do Estado do Rio de Janeiro)</strong></p>
+        <p><strong>UFRJ (Universidade Federal do Rio de Janeiro)</strong></p>
         <p>Professor Adjunto (Assistant Professor)</p>
-        <p>R. São Francisco Xavier, 524 - Maracanã, Rio de Janeiro, Brasil</p>
-        <p>Email: lucas.aragao(at)uerj(dot)br</p>
+        <p> UFRJ, Rio de Janeiro, Brasil</p>
+        <p>Email: aragao(at)im(dot)ufrj(dot)br</p>
     </section>
 
     <!-- About Me Section -->
@@ -88,7 +88,7 @@
         <h2>About Me</h2>
         <p>
             
-            I am Professor Adjunto (Assistant Professor) at UERJ. 
+            I am Professor Adjunto (Assistant Professor) at UFRJ. 
             I had my PhD at IMPA under the supervision of 
             <a href="https://robiscounting.github.io/" target="_blank">Rob Morris</a>. 
             My research focuses mainly on extremal, probabilistic, and additive combinatorics.
